--- a/pages/simulateur.html
+++ b/pages/simulateur.html
@@ -12,6 +12,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta name="description" content="Découvrez des casques moto dépassant même les exigences des tests de sécurité. Tous les casques Nolark au meilleur prix et avec en prime la livraison gratuite !">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../css/styles.css" rel="stylesheet" type="text/css">
+        <link href="../css/contact.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="../favicon.ico">
         <script src="../js/remuneration"></script>
         <!--<script src="../js/nolark.js"></script>-->
@@ -42,7 +43,27 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </ul>
             </nav>
         </header>
-        
+        <section id="contact">
+            <h1>Simulateur de rémunération</h1>
+            <form name="form_contact" action="http://gil83.fr/nolark/testforms.php" method="POST">
+                <fieldset id="coordo">
+                    <legend>Pour mieux vous connaître</legend>
+                    <div>
+                        <!--<label for="lst_typeclient">Vous êtes : </label>-->
+                        <select name="lst_nbAncien" id="nbAncien">
+                            <option value="1">Ancienneté inferieur à 5</option>
+                            <option value="2">Ancienneté comprise entre 5 et 10</option>
+                            <option value="3">Ancienneté supérieur a 10</option>
+                        </select>
+                    </div>
+                    <div><label for="i_nom">Nombre de casques X-Spirit vendus</label> <input type="text" name="i_nom" id="i_nom" size="35" pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ\s\-]+$" required><div class="input-validation"></div></div>
+                    <div><label for="i_prenom">Nombre de casques Multitec vendus</label> <input type="text" name="i_prenom" id="i_prenom" size="35" pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ\s\-]+$" required><div class="input-validation"></div></div>
+                    <div><label for="i_email">Nombre de casques S 20 vendus</label> <input type="email" name="i_email" id="i_email" size="35" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required><div class="input-validation"></div></div>
+                    <!--<div><input type="number" name="num_jour" id="num_jour" min="1" max="31"></div>-->
+                </fieldset>
+                <div id="controles"><input type="button" id="btn_envoyer" name="sub_envoyer" value="Effectuer le calcul"> <input type="reset" name="rst_annuler" value="Effacer les réponses"></div>
+            </form>
+        </section>
         <footer>
             <p>&copy;2018 Nolark - Créé par <a href="mailto:jose.gil@ac-nice.fr">José GIL</a><p>
         </footer>
