--- a/pages/simulateur.html
+++ b/pages/simulateur.html
@@ -56,10 +56,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                             <option value="3">Ancienneté supérieur a 10</option>
                         </select>
                     </div>
-                    <div><label for="i_nom">Nombre de casques X-Spirit vendus</label> <input type="text" name="i_nom" id="i_nom" size="35" pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ\s\-]+$" required><div class="input-validation"></div></div>
+<!--                    <div><label for="i_nom">Nombre de casques X-Spirit vendus</label> <input type="text" name="i_nom" id="i_nom" size="35" pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ\s\-]+$" required><div class="input-validation"></div></div>
                     <div><label for="i_prenom">Nombre de casques Multitec vendus</label> <input type="text" name="i_prenom" id="i_prenom" size="35" pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ\s\-]+$" required><div class="input-validation"></div></div>
-                    <div><label for="i_email">Nombre de casques S 20 vendus</label> <input type="email" name="i_email" id="i_email" size="35" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required><div class="input-validation"></div></div>
-                    <!--<div><input type="number" name="num_jour" id="num_jour" min="1" max="31"></div>-->
+                    <div><label for="i_email">Nombre de casques S 20 vendus</label> <input type="email" name="i_email" id="i_email" size="35" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required><div class="input-validation"></div></div>-->
+                    <div><label for="num_XSpirit">Nombre de casques X-Spirit vendus</label><input type="number" name="num_XSpirit" id="num_XSpirit"></div>
+                    <div><label for="num_XSpirit">Nombre de casques Multitec vendus</label><input type="number" name="num_Multitec" id="num_Multitec"></div>
+                    <div><label for="num_XSpirit">Nombre de casques S 20 vendus</label><input type="number" name="num_S20" id="num_S20"></div>
+                    
                 </fieldset>
                 <div id="controles"><input type="button" id="btn_envoyer" name="sub_envoyer" value="Effectuer le calcul"> <input type="reset" name="rst_annuler" value="Effacer les réponses"></div>
             </form>
