--- a/pages/simulateur.html
+++ b/pages/simulateur.html
@@ -14,7 +14,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link href="../css/styles.css" rel="stylesheet" type="text/css">
         <link href="../css/contact.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="../favicon.ico">
-        <script src="../js/remuneration"></script>
+        <script src="../js/remunerationv2"></script>
         <!--<script src="../js/nolark.js"></script>-->
     </head>
     <body>
@@ -49,12 +49,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <fieldset id="coordo">
                     <legend>Pour mieux vous connaître</legend>
                     <div>
-                        <!--<label for="lst_typeclient">Vous êtes : </label>-->
-                        <select name="lst_nbAncien" id="nbAncien">
+                        <label for="lst_nbAncien">Vous êtes : </label>
+                        <select name="lst_nbAncien" id="lst_nbAncien">
                             <option value="1">Ancienneté inferieur à 5</option>
                             <option value="2">Ancienneté comprise entre 5 et 10</option>
                             <option value="3">Ancienneté supérieur a 10</option>
                         </select>
+<!--                        <label for="lst_typeclient">ancienneté</label><input type="number" name="nbAncien" id="num_XSpirit">-->
                     </div>
 <!--                    <div><label for="i_nom">Nombre de casques X-Spirit vendus</label> <input type="text" name="i_nom" id="i_nom" size="35" pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ\s\-]+$" required><div class="input-validation"></div></div>
                     <div><label for="i_prenom">Nombre de casques Multitec vendus</label> <input type="text" name="i_prenom" id="i_prenom" size="35" pattern="^[a-zA-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ\s\-]+$" required><div class="input-validation"></div></div>
@@ -67,6 +68,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <div id="controles"><input type="button" id="btn_envoyer" name="sub_envoyer" value="Effectuer le calcul"> <input type="reset" name="rst_annuler" value="Effacer les réponses"></div>
             </form>
         </section>
+        <section>
+            <p>fensiofjifes <span id="resultSimu"></span> €</p>
+        </section>
+        
+        
         <footer>
             <p>&copy;2018 Nolark - Créé par <a href="mailto:jose.gil@ac-nice.fr">José GIL</a><p>
         </footer>
