--- a/pages/livrexpress.html
+++ b/pages/livrexpress.html
@@ -70,7 +70,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <div>
                 <p>Votre prime de fin d'année sera de : <span id="resultSimu"></span> €</p>
             </div>
-            <div id='aipaslseumfrero'>
+            <div id='aipaslseumfrero' style="display:none;"> <!--none pour cacher-->
                 <p>Votre prime aurait pu être de <span id="siNoAccident"></span>€ si vous n'aviez eu aucun accident!!</p>
             </div>
         </section>
