--- a/pages/livrexpress.html
+++ b/pages/livrexpress.html
@@ -62,7 +62,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         </select>
                     </div>
                 </fieldset>
-                <div id="controles"><input type="button" id="btn_envoyer" name="sub_envoyer" value="Effectuer le calcul"> <input type="reset" name="rst_annuler" value="Effacer les réponses"></div>
+                <div id="controles"><input type="button" id="btn_envoyer" name="sub_envoyer" value="Effectuer le calcul"> <input type="reset" id="btn_cancel" name="rst_annuler" value="Effacer les réponses"></div>
             </form>
         </section>
         
